docs/original_moodle/unidades/entregas/todas/2/Quiz Trabajo en Clase/SIMARRA-1151896 NEIDER JOAN 2581/2019-10-13-11-38-55.ceg/compilation.txt
Universidad.java:36: error: array required, but Materia found
        this.materias[i]=materia[contadorMaterias++];
                                ^
1 error
Not compiled
